--- a/globe.html
+++ b/globe.html
@@ -499,7 +499,7 @@ let citiesData;
 /////PLAYLIST FUNCTIONALITY
 <script>
 
-  const songs = ['songs/4_Koto Clip_0_11-0_16.mp3','songs/5_Dizi Clip_0_03-0_12.mp3','songs/7_Pipa Clip_0_00-0_08.mp3'];
+  const songs = ['4_Koto Clip_0_11-0_16.mp3','5_Dizi Clip_0_03-0_12.mp3','7_Pipa Clip_0_00-0_08.mp3'];
 
   var audioPlayer = document.getElementById('audioPlayer');
 
